<resources>
    <string name="app_name">Relate</string>
    <string name="name_default_text">Ty Nafziger</string>
    <string name="name_default_text_2">Nick Rogers</string>
    <string name="birthday_default_text">May 1</string>
    <string name="birthday_label">Birthday:</string>
    <string name="relationship_category_default_text">Friend</string>
    <string name="enter_name_hint">Name</string>
    <string name="enter_birthday_hint">Birthday</string>
    <string name="enter_relationship_hint">Relationship</string>
    <string name="add_picture_button">Click to add picture</string>
    <string name="note_view_instructions">Write a note</string>
    <string name="cancel_create">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string-array name="months_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
