<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RelationshipDetailActivity">

    <include layout="@layout/relationship_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <fragment class="com.nydev.relate.DemographicsEditFragment"
                android:id="@+id/demographics_edit_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout="@layout/demographics_edit_fragment" />

        </LinearLayout>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_person_outline_black_48dp"
            android:contentDescription="@string/add_picture_button"/>

    </LinearLayout>

    <EditText
        android:id="@+id/note_edit_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFF9C4"
        android:layout_margin="16dp"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:hint="@string/note_view_instructions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_clear_black_24dp"
            android:onClick="cancelRelationship"
            android:contentDescription="@string/cancel_create"/>

        <ImageButton
            android:id="@+id/save_relationship"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_done_black_24dp"
            android:onClick="saveRelationship"
            android:contentDescription="@string/save"/>

    </LinearLayout>

</LinearLayout>