<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.nydev.relate.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_default_text"
                android:textSize="24sp"
                android:layout_marginBottom="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/birthday"
                    android:textSize="24sp"
                    android:layout_marginRight="16dp"/>

                <TextView
                    android:id="@+id/birthday_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birthday_default_text"
                    android:textSize="20sp"
                    android:layout_marginBottom="16dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/relationship_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relationship_category_default_text"
                android:textSize="24sp"
                android:layout_marginBottom="16dp" />

        </LinearLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ty"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#FFC107"
        android:layout_alignParentBottom="true"
        android:text="Met at Clark's apartment. He didn't want to go tubing."
        android:textSize="28sp"/>

</LinearLayout>
